Update frontend URL in environment variables and change primary callback URL for payment initiation to production

--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,6 @@ HUBTEL_CLIENT_ID=L9J4jAv
 HUBTEL_MERCHANT_ID=2031689
 HUBTEL_POS_SALES_ID=2031689
 PORT=8080
-FRONTEND_URL=https://hair-ecommerce-main.vercel.app/
+FRONTEND_URL=https://hair-ecommerce-main.vercel.app
 RETURN_URL=https://hair-ecommerce-main.vercel.app//success
 CANCEL_URL=https://hair-ecommerce-main.vercel.app//cancel
