Implement order management features: add checkout and callback routes, update order status, and enhance order tracking functionality

--- a/backend/.env
+++ b/backend/.env
@@ -9,5 +9,5 @@ HUBTEL_MERCHANT_ID=2031689
 HUBTEL_POS_SALES_ID=2031689
 PORT=8080
 FRONTEND_URL=https://hair-ecommerce-main.vercel.app
-RETURN_URL=https://hair-ecommerce-main.vercel.app//success
-CANCEL_URL=https://hair-ecommerce-main.vercel.app//cancel
+RETURN_URL=https://hair-ecommerce-main.vercel.app/success
+CANCEL_URL=https://hair-ecommerce-main.vercel.app/cancel
