--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10"
   }
 }
