--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10",
-    "resend": "^6.1.2"
+    "resend": "^6.1.2",
+    "xlsx": "^0.18.5"
   }
 }
